--- a/package.json
+++ b/package.json
@@ -32,5 +32,8 @@
     "typescript": "^3.1.6",
     "webpack": "^4.24.0",
     "webpack-node-externals": "^1.7.2"
+  },
+  "dependencies": {
+    "nodemailer": "^4.7.0"
   }
 }
